argocd-apps/media-server-stack/qbittorrent/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: radarr
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - qbittorrent.lab.local
      secretName: qbittorrent-tls
  rules:
  - host: qbittorrent.lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port:
              number: 80
